Added global exclude in reltool.config

--- a/reltool.config
+++ b/reltool.config
@@ -1,5 +1,6 @@
 {sys, [
        {lib_dirs, ["apps", "deps"]},
+       {incl_cond, exclude},
        {rel, "alog_example", "1",
         [
          kernel,
@@ -19,7 +20,13 @@
 
        {excl_archive_filters, [".*"]},
 
+       {app, kernel,           [{incl_cond, include}]},
+       {app, stdlib,           [{incl_cond, include}]},
        {app, sasl,           [{incl_cond, include}]},
+       {app, edown,           [{incl_cond, include}]},
+       {app, syslog,           [{incl_cond, include}]},
+       {app, parse_trans,           [{incl_cond, include}]},
+       {app, alog,           [{incl_cond, include}]},
        {app, alog_example,   [{incl_cond, include}]}     
       ]}.
 
