--- a/reltool.config
+++ b/reltool.config
@@ -23,6 +23,8 @@
        {app, kernel,           [{incl_cond, include}]},
        {app, stdlib,           [{incl_cond, include}]},
        {app, sasl,           [{incl_cond, include}]},
+       {app, syntax_tools,           [{incl_cond, include}]},
+       {app, compiler,           [{incl_cond, include}]},
        {app, edown,           [{incl_cond, include}]},
        {app, syslog,           [{incl_cond, include}]},
        {app, parse_trans,           [{incl_cond, include}]},
